--- a/notebooks/03c_recommend-SVD.ipynb
+++ b/notebooks/03c_recommend-SVD.ipynb
@@ -14,7 +14,9 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from scipy.sparse import coo_matrix\n",
-    "from implicit.als import AlternatingLeastSquares"
+    "from implicit.als import AlternatingLeastSquares\n",
+    "import scipy.sparse as sp\n",
+    "from scipy.sparse.linalg import svds"
    ]
   },
   {
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +48,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 451648 entries, 0 to 451647\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 13 columns):\n",
       " #   Column                 Non-Null Count   Dtype \n",
       "---  ------                 --------------   ----- \n",
       " 0   customer_id            451648 non-null  int64 \n",
@@ -54,13 +56,16 @@
       " 2   product_id             451648 non-null  object\n",
       " 3   review_date            451648 non-null  object\n",
       " 4   star_rating            451648 non-null  int64 \n",
-      " 5   product_title          451647 non-null  object\n",
-      " 6   review_headline        451033 non-null  object\n",
-      " 7   review_body            450864 non-null  object\n",
-      " 8   product title          451647 non-null  object\n",
-      " 9   product cluster label  451648 non-null  int64 \n",
-      "dtypes: int64(3), object(7)\n",
-      "memory usage: 34.5+ MB\n"
+      " 5   raw_product_title      451648 non-null  object\n",
+      " 6   raw_review_headline    451646 non-null  object\n",
+      " 7   raw_review_body        451530 non-null  object\n",
+      " 8   product_title          451647 non-null  object\n",
+      " 9   review_headline        451033 non-null  object\n",
+      " 10  review_body            450864 non-null  object\n",
+      " 11  product cluster label  451648 non-null  int64 \n",
+      " 12  cluster_label          451648 non-null  object\n",
+      "dtypes: int64(3), object(10)\n",
+      "memory usage: 44.8+ MB\n"
      ]
     }
    ],
@@ -78,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +92,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +166,7 @@
        "Name: count, Length: 278996, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,24 +195,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 8000 entries, 98528 to 142051\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   customer_id            8000 non-null   int64  \n",
-      " 1   review_id              8000 non-null   object \n",
-      " 2   product_id             8000 non-null   object \n",
-      " 3   review_date            8000 non-null   object \n",
-      " 4   star_rating            8000 non-null   int64  \n",
-      " 5   product_title          8000 non-null   object \n",
-      " 6   review_headline        7993 non-null   object \n",
-      " 7   review_body            7982 non-null   object \n",
-      " 8   product title          8000 non-null   object \n",
-      " 9   product cluster label  8000 non-null   int64  \n",
-      " 10  normalized_rating      8000 non-null   float64\n",
-      " 11  encoded_product_id     8000 non-null   int64  \n",
-      "dtypes: float64(1), int64(4), object(7)\n",
-      "memory usage: 812.5+ KB\n"
+      "Index: 8000 entries, 285322 to 357536\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   customer_id            8000 non-null   int64 \n",
+      " 1   review_id              8000 non-null   object\n",
+      " 2   product_id             8000 non-null   object\n",
+      " 3   review_date            8000 non-null   object\n",
+      " 4   star_rating            8000 non-null   int64 \n",
+      " 5   raw_product_title      8000 non-null   object\n",
+      " 6   raw_review_headline    7999 non-null   object\n",
+      " 7   raw_review_body        7998 non-null   object\n",
+      " 8   product_title          8000 non-null   object\n",
+      " 9   review_headline        7987 non-null   object\n",
+      " 10  review_body            7986 non-null   object\n",
+      " 11  product cluster label  8000 non-null   int64 \n",
+      " 12  cluster_label          8000 non-null   object\n",
+      "dtypes: int64(3), object(10)\n",
+      "memory usage: 875.0+ KB\n"
      ]
     }
    ],
@@ -220,12 +226,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Normalize rating"
+    "## Use SVD to reduce the dimentionality of the user-item matrix"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get user-item matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_piv = df_sample.pivot_table(index='customer_id',columns='product_id',values='star_rating',fill_value=0)\n",
+    "print(df_piv.shape)\n",
+    "user_item_matrix = df_piv.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_svd_model(user_item_matrix,X_pred):\n",
+    "    # Extract the ground truth ratings from the test set\n",
+    "    item_ground_truth = user_item_matrix[user_item_matrix.nonzero()]\n",
+    "    user_ground_truth = user_item_matrix[user_item_matrix.nonzero()]\n",
+    "\n",
+    "    # Extract the corresponding predicted ratings\n",
+    "    item_pred = X_pred[user_item_matrix.nonzero()]\n",
+    "\n",
+    "    # Calculate the root mean squared error (RMSE)\n",
+    "    item_rmse = np.sqrt(np.mean((item_ground_truth - item_pred) ** 2))\n",
+    "    return item_rmse\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get SVD components from user-item matrix: test different K components values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kcomp = np.linspace(30,100,8)\n",
+    "rmse_all = {}\n",
+    "for k in kcomp:\n",
+    "    u, s, vt = svds(user_item_matrix, k = k)\n",
+    "    s_diag_matrix=np.diag(s)\n",
+    "    X_pred = np.dot(np.dot(u, s_diag_matrix), vt)\n",
+    "    item_rmse = evaluate_svd_model(user_item_matrix,X_pred)\n",
+    "    rmse_all[f'{k} components'] = item_rmse\n",
+    "    print(f\"Item-based Filtering RMSE for {k} components: {item_rmse}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use ALS to reduce dimensionality of user-item matrix"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get user-item matrix"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normalize rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,20 +332,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User-item matrix"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Convert product id to numbers"
+    "#### Use sparse encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -265,27 +351,13 @@
    "source": [
     "df_piv = df.pivot_table(index='customer_id',columns='product_id',values='normalized_rating',fill_value=0)\n",
     "print(df_piv.shape)\n",
-    "user_item_matrix = df_piv.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "user_item_matrix = df_piv.to_numpy()\n",
+    "\n",
     "df['customer_id'] = df['customer_id'].astype(int)\n",
     "label_encoder = LabelEncoder()\n",
     "df['encoded_product_id']  = label_encoder.fit_transform(df['product_id'])\n",
-    "#decoded_product_ids = label_encoder.inverse_transform(encoded_product_ids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#decoded_product_ids = label_encoder.inverse_transform(encoded_product_ids)\n",
+    "\n",
     "row = df['customer_id'].values\n",
     "col = df['encoded_product_id'].values\n",
     "data = df['normalized_rating'].values\n",
@@ -298,46 +370,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split the data into training and test sets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_matrix, test_matrix = train_test_split(user_item_matrix_csr, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### ALS model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cda2f5311e845a1bf73b48a76724c70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/50 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = AlternatingLeastSquares(factors=50, regularization=0.01, iterations=50)\n",
     "\n",
@@ -351,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use gridsearch to identify the best ALS model"
+    "### Use gridsearch to identify the best ALS model"
    ]
   },
   {
@@ -390,6 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_matrix, test_matrix = train_test_split(user_item_matrix_csr, test_size=0.2, random_state=42)\n",
+    "\n",
     "model = AlternatingLeastSquares()\n",
     "\n",
     "# Define the parameter grid for grid search\n",
@@ -415,102 +457,6 @@
     "# Print the best parameters and RMSE\n",
     "print(\"Best Parameters:\", grid_search.best_params_)\n",
     "print(\"Test RMSE:\", test_rmse)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SVD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import Counter\n",
-    "from wordcloud import WordCloud\n",
-    "import seaborn as sns\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt\n",
-    "import scipy.sparse as sp\n",
-    "from scipy.sparse.linalg import svds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_path = '/Users/linwang/Documents/AmaRec/'\n",
-    "df = pd.read_csv(df_path + 'data/processed/data_clean_kmeanlabel.csv')\n",
-    "df = df[~df['product_title'].astype(str).str.contains('discontinued', na=False)]\n",
-    "df_sample = df.groupby('product cluster label').sample(1000, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(7774, 5185)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_piv = df_sample.pivot_table(index='customer_id',columns='product_id',values='star_rating',fill_value=0)\n",
-    "print(df_piv.shape)\n",
-    "user_item_matrix = df_piv.to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_svd_model(user_item_matrix,X_pred):\n",
-    "    # Extract the ground truth ratings from the test set\n",
-    "    item_ground_truth = user_item_matrix[user_item_matrix.nonzero()]\n",
-    "    user_ground_truth = user_item_matrix[user_item_matrix.nonzero()]\n",
-    "\n",
-    "    # Extract the corresponding predicted ratings\n",
-    "    item_pred = X_pred[user_item_matrix.nonzero()]\n",
-    "\n",
-    "    # Calculate the root mean squared error (RMSE)\n",
-    "    item_rmse = np.sqrt(np.mean((item_ground_truth - item_pred) ** 2))\n",
-    "    return item_rmse\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get SVD components from train matrix: test different K components values\n",
-    "kcomp = np.linspace(30,100,8)\n",
-    "rmse_all = {}\n",
-    "for k in kcomp:\n",
-    "    u, s, vt = svds(user_item_matrix, k = k)\n",
-    "    s_diag_matrix=np.diag(s)\n",
-    "    X_pred = np.dot(np.dot(u, s_diag_matrix), vt)\n",
-    "    item_rmse = evaluate_svd_model(user_item_matrix,X_pred)\n",
-    "    rmse_all[f'{k} components'] = item_rmse\n",
-    "    print(f\"Item-based Filtering RMSE for {k} components: {item_rmse}\")"
    ]
   }
  ],
